--- a/assets/css/master.css
+++ b/assets/css/master.css
@@ -2,11 +2,12 @@
     position: relative;
 }
 #reqs ul li span {
-    color: #FFFFFF;
-    text-shadow: rgba(0,0,0,.7) 0 1px 2px;
+    color: #000;
+    /*text-shadow: rgba(0,0,0,.7) 0 1px 2px;*/
 }
-#reqs ul li .delete {
+#reqs ul li .vist {
     position: absolute;
+    color: #FFFFFF;
     top: 5px;
     right: 6px;
     font-size: 12px;
