--- a/assets/css/master.css
+++ b/assets/css/master.css
@@ -14,5 +14,5 @@
     line-height: 30px;
     padding: 0 3px;
     border-width: 0 5px;
-    -webkit-border-image: url(../img/button.png) 0 5 0 5;
+    /*-webkit-border-image: url(../img/button.png) 0 5 0 5;*/
 }
